fix tap highlight on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -91,6 +91,11 @@
         300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
 }
 
+/* webkit tap highlight */
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
 
 /* button reset */
 button {
